--- a/src/ui/styles.css
+++ b/src/ui/styles.css
@@ -1,4 +1,4 @@
-*{font-size:12dip;font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+*{font-size:14dip;font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
 
 /* index Page */
 .h-flow{flow:horizontal;}
@@ -47,7 +47,7 @@ div#sw {flow: horizontal;width:380dip;margin: 2px;vertical-align: middle;}
 .modulelist ul li input[type="checkbox"]{padding:0 4dip 0 0;}
 
 /* Table Style */
-table {font:system;border:1px solid #dcdcdc; flow:table-fixed;size:*;padding:0;border-spacing:0;border-collapse: collapse;overflow-x: scroll-indicator;}
+table {border:1px solid #dcdcdc; flow:table-fixed;size:*;padding:0;border-spacing:0;border-collapse: collapse;overflow-x: scroll-indicator;}
 table > thead {behavior:column-resizer;font-weight:bold;background:#eee;}
 table > tbody {size:*;overflow: scroll-indicator;}
 table > tbody > tr:hover {background: #E1F1FF;}
